New APIs and fixed incorrect title for Pod status.
Fixes:
- Corrected wrong title for Pod Status.
- New API for removing ENV files.
- New API for removing secrets files.
- Updated crate dependencies.
